[package]
name = "mission-controll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
uuid = {version = "1.3", features = ["v4", "fast-rng", "macro-diagnostics"]}
lazy_static = "1.4"
diesel =  { version = "2.0",  features = ["postgres", "r2d2"] }
diesel-async = { version = "0.2",  features = ["postgres", "bb8"] }
dotenvy = "0.15"